# TalesWeaver

./: .gitignore  MODEL_CARD.md  README.md  main.py  pyproject.toml
evaluation/: README.md
examples/: generate.ipynb
talesweaver/: __init__.py  architecture.ipynb  config.py  generation.py  model.py  transformer.py
weights/: README.md
