[project]
name = "talesweaver"
version = "0.1.0"
description = "A small transformer language model for story generation, trained on TinyStories."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.2",
    "orbax-checkpoint>=0.11.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
